--- a/spec/support/provision/vars/debian.yml
+++ b/spec/support/provision/vars/debian.yml
@@ -6,3 +6,4 @@ ag_package_name: silversearcher-ag
 pt_download_url: https://github.com/monochromegane/the_platinum_searcher/releases/download/v2.2.0/pt_linux_amd64.tar.gz
 rg_download_url: https://github.com/BurntSushi/ripgrep/releases/download/12.1.1/ripgrep-12.1.1-x86_64-unknown-linux-musl.tar.gz
 ps_package_name: procps
+package_become: yes
