--- a/.travis.yml
+++ b/.travis.yml
@@ -19,9 +19,8 @@ before_install:
     gem install bundler
 install:
   - |
-    # pip install --user ansible jmespath
     sudo apt-get update
-    sudo apt-get install ansible
+    pip install --user ansible jmespath
     ansible-playbook --version
     make host-provision serializer
 before_script:
