--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ before_install:
 install:
   - |
     sudo apt-get update
-    sudo apt-get -y install ansible
+    sudo apt-get -y install ansible ruby-dev
     make provision-host build-serializer
 before_script:
   - |
