--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ install:
   - |
     sudo apt-get update
     sudo apt-get -y install ansible ruby-dev
-    make provision-host build-serializer
+    make provision-host build-serializer DOCKER_RUN=
 before_script:
   - |
     vim --version || true
