--- a/.travis.yml
+++ b/.travis.yml
@@ -35,10 +35,7 @@ jobs:
     - name: 'Unit tests'
       script:
         - |
-          vim -Nu <(cat << VIMRC
-          set rtp+=~/.cache/esearch-dev/plugins/vader.vim
-          set rtp+=.
-          VIMRC) -c 'Vader! spec/*.vader' > /dev/null
+          vim -Nu spec/vimrc -c 'Vader! spec/*.vader' /dev/null
         - bundle exec parallel_test -n 2 --type rspec spec/unit/
       os: linux
     - name: 'Acceptance tests of #backend#system patterns'
