--- a/.travis.yml
+++ b/.travis.yml
@@ -34,11 +34,8 @@ jobs:
   include:
     - name: 'Unit tests'
       script:
-        - |
-          vim -Nu <(cat << VIMRC
-          set rtp+=~/.cache/esearch-dev/plugins/vader.vim
-          set rtp+=.
-          VIMRC) -c 'Vader! spec/*.vader' > /dev/null
+        - vim  -Nu spec/vimrc -c 'Vader! spec/*.vader' >/dev/null
+        - nvim -Nu spec/vimrc -c 'Vader! spec/*.vader' >/dev/null
         - bundle exec parallel_test -n 2 --type rspec spec/unit/
       os: linux
     - name: 'Acceptance tests of #backend#system patterns'
