--- a/spec/support/setup/site.yml
+++ b/spec/support/setup/site.yml
@@ -47,6 +47,13 @@
             name: ['semgrep']
             state: present
 
+        - name: From go-get
+          command: "go get {{ item }}"
+          environment:
+            GO111MODULE: "on"
+          with_items:
+            - mvdan.cc/gogrep
+
         - name: Install prebuilt
           block:
             - name: Download
