fix package name

--- a/spec/support/setup/site.yml
+++ b/spec/support/setup/site.yml
@@ -14,11 +14,11 @@
           with_items:
             - luarocks
             - git
-            - go
             - curl
             - ragel
             - unzip
             - neovim
+            - "{{ go_package_name }}"
             - '{{ vim_package_name }}'
             - '{{ tar_package_name }}'
             - '{{ pip_package_name }}'
