--- a/spec/support/setup/vars/darwin.yml
+++ b/spec/support/setup/vars/darwin.yml
@@ -1,6 +1,7 @@
 vim_package_name: macvim
 tar_package_name: gnu-tar
 pip_package_name: python3
+go_package_name: go
 ack_package_name: ack
 ag_package_name: the_silver_searcher
 pt_download_url: https://github.com/monochromegane/the_platinum_searcher/releases/download/v2.2.0/pt_darwin_amd64.zip
