--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,70 +1,16 @@
+AllCops:
+  Exclude:
+    - 'spec/support/bin/**/*'
+    - 'spec/fixtures/**/*'
+    - 'spec/support/lib/viml_value/parser.rb'
+    - 'spec/support/lib/viml_value/lexer.rb'
+
 Layout/LineLength:
   Max: 120
 
 Layout/EmptyLinesAroundBlockBody:
   Exclude:
     - '**/*_spec.rb'
-
-Metrics/BlockLength:
-  Enabled: false
-
-Style/FrozenStringLiteralComment:
-  Exclude:
-    - Gemfile
-    - Gemfile.lock
-
-# TODO
-Metrics/AbcSize:
-  Enabled: false
-
-# TODO
-Layout/ArgumentAlignment:
-  Enabled: false
-
-# Allow:
-#  expect {
-#    any-
-#    thing
-#  }.to be_ok
-Style/BlockDelimiters:
-  Exclude:
-    - 'spec/**/*_spec.rb'
-    - 'spec/spec_helper.rb'
-    - 'spec/**/shared_examples/*.rb'
-
-# Allow .to change {} dsl
-Lint/AmbiguousBlockAssociation:
-  Exclude:
-    - 'spec/**/*_spec.rb'
-    - 'spec/spec_helper.rb'
-    - 'spec/support/helpers/**/*.rb'
-    - 'spec/**/shared_examples/*.rb'
-
-Layout/FirstArrayElementIndentation:
-  EnforcedStyle: consistent
-
-Lint/BooleanSymbol:
-  Enabled: false
-
-Style/DoubleNegation:
-  Enabled: false # TODO
-
-Metrics/MethodLength:
-  Max: 20
-
-AllCops:
-  Exclude:
-    - 'spec/support/**/brew_formulae/**/*'
-    - 'spec/support/bin/**/*'
-    - 'spec/fixtures/**/*'
-    - 'spec/support/lib/viml_value/parser.rb'
-    - 'spec/support/lib/viml_value/lexer.rb'
-
-Style/ClassAndModuleChildren:
-  EnforcedStyle: compact
-  Exclude:
-    - 'spec/support/vimrunner_neovim/**/*'
-    - 'spec/support/dsl/**/*'
 
 Layout/HashAlignment:
   EnforcedColonStyle: table
@@ -73,14 +19,59 @@ Layout/HashAlignment:
 Layout/SpaceInsideHashLiteralBraces:
   EnforcedStyle: no_space
 
+Layout/FirstArrayElementIndentation:
+  EnforcedStyle: consistent
+
+Layout/ArgumentAlignment:
+  EnforcedStyle: with_fixed_indentation
+
+Style/FrozenStringLiteralComment:
+  Exclude:
+    - Gemfile
+    - Gemfile.lock
+
+Metrics/AbcSize:
+  Enabled: false
+
+Metrics/BlockLength:
+  Enabled: false
+
+Metrics/MethodLength:
+  Max: 20
+
+Metrics/CyclomaticComplexity:
+  Max: 8
+
+# Allow .to change {} dsl
+Lint/AmbiguousBlockAssociation:
+  Exclude:
+    - 'spec/**/*_spec.rb'
+    - 'spec/spec_helper.rb'
+    - 'spec/support/helpers/**/*.rb'
+
+Lint/BooleanSymbol:
+  Enabled: false
+
+Lint/MissingSuper:
+  Enabled: false
+
+Lint/ConstantDefinitionInBlock:
+  Exclude:
+    - 'spec/**/*_spec.rb'
+    - 'spec/spec_helper.rb'
+    - 'spec/support/helpers/**/*.rb'
+
+Style/ClassAndModuleChildren:
+  EnforcedStyle: compact
+  Exclude:
+    - 'spec/support/vimrunner_neovim/**/*'
+    - 'spec/support/dsl/**/*'
+
 Style/TrailingCommaInHashLiteral:
   EnforcedStyleForMultiline: consistent_comma
 
 Style/TrailingCommaInArrayLiteral:
   EnforcedStyleForMultiline: consistent_comma
-
-Metrics/CyclomaticComplexity:
-  Max: 8
 
 ### Parser specs
 # use %q|| instead of %q() to simplify escaping testing
@@ -88,14 +79,14 @@ Style/PercentQLiterals:
   Exclude:
     - 'spec/lib/viml_value/*_spec.rb'
     - 'spec/lib/viml_value_spec.rb'
-Style/RedundantPercentQ: # to preserve alignments
+Style/RedundantPercentQ:  # to preserve alignments
   Exclude:
     - 'spec/lib/viml_value/*_spec.rb'
     - 'spec/lib/viml_value_spec.rb'
 Style/PercentLiteralDelimiters:
   PreferredDelimiters:
-    '%q':    '||'
-    '%Q':    '||'
+    '%q': '||'
+    '%Q': '||'
   Include:
     - 'spec/lib/viml_value/*_spec.rb'
     - 'spec/lib/viml_value_spec.rb'
