--- a/spec/support/setup/site.yml
+++ b/spec/support/setup/site.yml
@@ -5,7 +5,9 @@
     - include_vars: '{{ ansible_os_family | lower }}.yml'
 
     - name: Create a directory for dependencies
-      file: '{{ ansible_env.HOME }}/.cache/esearch-dev'
+      file:
+        path: '{{ ansible_env.HOME }}/.cache/esearch-dev'
+        state: directory
 
     - name: Setup global dependencies
       block:
