--- a/spec/support/setup/site.yml
+++ b/spec/support/setup/site.yml
@@ -27,11 +27,11 @@
             - '{{ tar_package_name }}'
             - '{{ pip_package_name }}'
             - '{{ ps_package_name }}'
-        - name: go
-          unarchive:
-            src: 'https://golang.org/dl/go1.11.linux-amd64.tar.gz'
-            dest: '{{ ansible_env.HOME }}/.cache/esearch-dev'
-            remote_src: true
+        # - name: go
+        #   unarchive:
+        #     src: 'https://golang.org/dl/go1.11.linux-amd64.tar.gz'
+        #     dest: '{{ ansible_env.HOME }}/.cache/esearch-dev'
+        #     remote_src: true
 
         - name: lua linter
           command: luarocks install luacheck
@@ -58,7 +58,7 @@
             name: ['semgrep']
             state: present
         - name: From go-get
-          command: "{{ ansible_env.HOME }}/.cache/esearch-dev/go/bin/go get {{ item }}"
+          command: "go get {{ item }}"
           environment:
             GO111MODULE: "on"
           with_items:
