--- a/spec/support/setup/site.yml
+++ b/spec/support/setup/site.yml
@@ -1,12 +1,17 @@
 - hosts: localhost
-  gather_facts: yes
+  gather_facts: true
   connection: local
   tasks:
     - include_vars: '{{ ansible_os_family | lower }}.yml'
 
+    - name: Create a directory for dependencies
+      file:
+        path: '{{ ansible_env.HOME }}/.cache/esearch-dev'
+        state: directory
+
     - name: Setup global dependencies
       block:
-        - name: Packages
+        - name: packages
           package:
             name: '{{ item }}'
             state: present
@@ -22,19 +27,25 @@
             - '{{ tar_package_name }}'
             - '{{ pip_package_name }}'
             - '{{ ps_package_name }}'
-        - name: Lua linter
+        # - name: go
+        #   unarchive:
+        #     src: 'https://golang.org/dl/go1.11.linux-amd64.tar.gz'
+        #     dest: '{{ ansible_env.HOME }}/.cache/esearch-dev'
+        #     remote_src: true
+
+        - name: lua linter
           command: luarocks install luacheck
           become: '{{ package_become }}'
           args:
             creates: /usr/local/bin/luacheck
-        - name: PIP packages
+        - name: pip packages
           pip:
             name: ['vim-vint', 'neovim']
             state: present
 
     - name: Setup greppers
       block:
-        - name: From system package manager
+        - name: from system package manager
           package:
             name: '{{ item }}'
             state: present
@@ -52,28 +63,28 @@
             GO111MODULE: "on"
           with_items:
             - mvdan.cc/gogrep
-        - name: Install prebuilt
+        - name: install prebuilt
           block:
-            - name: Download
+            - name: download
               unarchive:
                 src: '{{ item.download_url }}'
                 dest: /tmp
-                remote_src: yes
+                remote_src: true
               with_items: '{{ greppers }}'
-            - name: Find extracted binary
+            - name: find extracted binary
               find:
                 paths: /tmp
-                recurse: yes
+                recurse: true
                 patterns: '{{ item.bin }}'
               register: bins
               with_items: '{{ greppers }}'
-            - name: Copy into /usr/local/bin
+            - name: copy into /usr/local/bin
               copy:
                 src: '{{ item.path }}'
                 dest: '/usr/local/bin/{{ item.path | basename }}'
               become: '{{ package_become }}'
               with_items: '{{ bins.results | map(attribute="files") | map("first") | list }}'
-            - name: Make executable
+            - name: make executable
               file:
                 dest: '/usr/local/bin/{{ item.bin }}'
                 mode: a+x
@@ -83,12 +94,12 @@
             - greppers:
               - {bin: pt, download_url: '{{ pt_download_url }}'}
               - {bin: rg, download_url: '{{ rg_download_url }}'}
-        - name: Configure git-grep
+        - name: configure git-grep
           block:
             - git_config: {scope: global, name: core.precomposeunicode, value: 'true'}
             - git_config: {scope: global, name: core.quotePath, value: 'false'}
 
-    - name: Setup plugin dependencies
+    - name: setup plugin dependencies
       git:
         repo: "{{ item }}"
         dest: "~/.cache/esearch-dev/plugins/{{ item | urlsplit('path') | basename | splitext | first }}"
@@ -103,13 +114,13 @@
         - https://github.com/roxma/nvim-yarp.git
         - https://github.com/roxma/vim-hug-neovim-rpc.git
 
-    - name: Setup testing dependencies
+    - name: setup testing dependencies
       block:
-        - name: Install libs
+        - name: libs
           bundler:
             state: present
             extra_args: '--without development'
-        - name: Setup vader testing framework
+        - name: vader testing framework
           git:
             repo: https://github.com/junegunn/vader.vim.git
             dest: ~/.cache/esearch-dev/plugins/vader.vim
