--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,9 @@ install:
     sudo apt-get update
     sudo apt-get -y install ansible ruby-dev
     eval "$(curl -sL https://raw.githubusercontent.com/travis-ci/gimme/master/gimme | GIMME_GO_VERSION=stable bash)"
-    make setup-host setup-serializer DOCKER_RUN=
+    which go
+    exit 1
+    # make setup-host setup-serializer DOCKER_RUN=
 before_script:
   - |
     vim --version || true
