--- a/spec/support/setup/site.yml
+++ b/spec/support/setup/site.yml
@@ -28,23 +28,8 @@
             - '{{ tar_package_name }}'
             - '{{ pip_package_name }}'
             - '{{ ps_package_name }}'
-        - name: go
-          block:
-            - name: download binary
-              unarchive:
-                src: 'https://golang.org/dl/go1.15.8.linux-amd64.tar.gz'
-                dest: '{{ deps_dir }}'
-                remote_src: true
-            - name: link
-              file:
-                src: '{{ deps_dir }}/go/bin/go'
-                dest: /usr/local/bin/go
-                state: link
-            - name: path
-              lineinfile:
-                path: '{{ ansible_env.HOME }}/.bashrc'
-                state: present
-                line: 'export PATH="$PATH:$HOME/go/bin"'
+        - name: 
+          shell: eval "$(curl -sL https://raw.githubusercontent.com/travis-ci/gimme/master/gimme | GIMME_GO_VERSION=stable bash)"
         - name: lua linter
           command: luarocks install luacheck
           become: '{{ package_become }}'
@@ -70,9 +55,9 @@
             name: ['semgrep']
             state: present
         - name: From go-get
-          command: "go get {{ item }}"
+          shell: 'go get {{ item }}'
           environment:
-            GO111MODULE: "on"
+            GO111MODULE: 'on'
           with_items:
             - mvdan.cc/gogrep
         - name: install prebuilt
@@ -113,8 +98,8 @@
 
     - name: setup plugin dependencies
       git:
-        repo: "{{ item }}"
-        dest: "~/.cache/esearch-dev/plugins/{{ item | urlsplit('path') | basename | splitext | first }}"
+        repo: '{{ item }}'
+        dest: '{{ deps_dir }}/plugins/{{ item | urlsplit("path") | basename | splitext | first }}'
       with_items:
         - https://github.com/mg979/vim-visual-multi.git
         - https://github.com/tpope/vim-fugitive.git
@@ -135,4 +120,4 @@
         - name: vader testing framework
           git:
             repo: https://github.com/junegunn/vader.vim.git
-            dest: ~/.cache/esearch-dev/plugins/vader.vim
+            dest: '{{ deps_dir }}/plugins/vader.vim'
