--- a/spec/support/setup/site.yml
+++ b/spec/support/setup/site.yml
@@ -30,6 +30,16 @@
             - '{{ ps_package_name }}'
         - name: go
           shell: eval "$(curl -sL https://raw.githubusercontent.com/travis-ci/gimme/master/gimme | GIMME_GO_VERSION=1.14 bash)"
+        - name: gohome
+          lineinfile:
+            path: '{{ ansible_env.HOME }}/.bashrc'
+            state: present
+            line: 'export PATH="$PATH:$HOME/go/bin"'
+        - name: go path
+          lineinfile:
+            path: '{{ ansible_env.HOME }}/.bashrc'
+            state: present
+            line: '. ~/.gimme/envs/go1.14.env'
         - name: lua linter
           command: luarocks install luacheck
           become: '{{ package_become }}'
